main - VALIDANDO LAS ENTRADAS DE LOS FILTROS PARA IMPEDIR CARACTERES MALICIOSOSO
